Detail Entities reworked to reflect multirole better, fixed demandCreation from loggedUser
git-svn-id: https://svn.webgres.cz/svn/poptavka@480 61682b0c-635e-44ba-a85b-d27e7dc34134